mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/AuthorizationException.java
package com.example.mdd_backend.errors.exceptions;

public class AuthorizationException extends RuntimeException {
    public AuthorizationException(String message) {
        super(message);
    }
}
